--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@fortawesome/free-solid-svg-icons": "^6.5.2",
+    "@fortawesome/react-fontawesome": "^0.2.1",
     "@headlessui/react": "^2.0.3",
     "@heroicons/react": "^2.1.3",
     "jwt-decode": "^4.0.0",
