--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@fortawesome/react-fontawesome": "^0.2.1",
     "@headlessui/react": "^2.0.3",
     "@heroicons/react": "^2.1.3",
+    "cors": "^2.8.5",
     "jwt-decode": "^4.0.0",
     "react": "^18.2.0",
     "react-data-table-component": "^7.6.2",
