--- a/package.json
+++ b/package.json
@@ -14,9 +14,11 @@
     "@fortawesome/react-fontawesome": "^0.2.1",
     "@headlessui/react": "^2.0.3",
     "@heroicons/react": "^2.1.3",
+    "chart.js": "^4.4.3",
     "cors": "^2.8.5",
     "jwt-decode": "^4.0.0",
     "react": "^18.2.0",
+    "react-chartjs-2": "^5.2.0",
     "react-data-table-component": "^7.6.2",
     "react-dom": "^18.2.0",
     "react-icons": "^5.2.1",
