--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "react-data-table-component": "^7.6.2",
     "react-dom": "^18.2.0",
     "react-icons": "^5.2.1",
+    "react-rating-stars-component": "^2.2.0",
+    "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^6.23.0"
   },
   "devDependencies": {
