--- a/package.json
+++ b/package.json
@@ -10,19 +10,28 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emotion/react": "^11.11.4",
+    "@emotion/styled": "^11.11.5",
     "@fortawesome/free-solid-svg-icons": "^6.5.2",
     "@fortawesome/react-fontawesome": "^0.2.1",
     "@headlessui/react": "^2.0.3",
     "@heroicons/react": "^2.1.3",
+    "@mui/icons-material": "^5.15.18",
     "chart.js": "^4.4.3",
     "cors": "^2.8.5",
     "jwt-decode": "^4.0.0",
     "react": "^18.2.0",
     "react-chartjs-2": "^5.2.0",
+    "react-circular-progressbar": "^2.1.0",
     "react-data-table-component": "^7.6.2",
     "react-dom": "^18.2.0",
+    "react-hot-toast": "^2.4.1",
     "react-icons": "^5.2.1",
-    "react-router-dom": "^6.23.0"
+    "react-modal": "^3.16.1",
+    "react-rating-stars-component": "^2.2.0",
+    "react-responsive-carousel": "^3.2.23",
+    "react-router-dom": "^6.23.0",
+    "recharts": "^2.12.7"
   },
   "devDependencies": {
     "@types/react": "^18.2.66",
@@ -34,6 +43,7 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.6",
     "postcss": "^8.4.38",
+    "sass": "^1.77.2",
     "tailwindcss": "^3.4.3",
     "vite": "^5.2.0"
   }
