--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@fortawesome/react-fontawesome": "^0.2.1",
     "@headlessui/react": "^2.0.3",
     "@heroicons/react": "^2.1.3",
+    "@material-tailwind/react": "^2.1.9",
     "@mui/icons-material": "^5.15.18",
     "chart.js": "^4.4.3",
     "cors": "^2.8.5",
